--- a/remote/src/main/package.json
+++ b/remote/src/main/package.json
@@ -1,6 +1,6 @@
 {
   "name": "radioberry",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "scripts": {
     "ng": "ng",
     "watch": "ng build --watch --configuration development",
@@ -15,14 +15,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.0.2",
-    "@angular/common": "~13.0.2",
-    "@angular/compiler": "~13.0.2",
-    "@angular/core": "~13.0.2",
-    "@angular/forms": "~13.0.2",
-    "@angular/platform-browser": "~13.0.2",
-    "@angular/platform-browser-dynamic": "~13.0.2",
-    "@angular/router": "~13.0.2",
+    "@angular/animations": "^14.2.12",
+    "@angular/common": "^14.2.12",
+    "@angular/compiler": "^14.2.12",
+    "@angular/core": "^14.2.12",
+    "@angular/forms": "^14.2.12",
+    "@angular/platform-browser": "^14.2.12",
+    "@angular/platform-browser-dynamic": "^14.2.12",
+    "@angular/router": "^14.2.12",
     "@types/underscore": "^1.9.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
@@ -30,10 +30,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.3",
-    "@angular/cli": "~13.0.3",
-    "@angular/compiler-cli": "~13.0.2",
-    "@angular/language-service": "~13.0.2",
+    "@angular-devkit/build-angular": "^14.2.10",
+    "@angular/cli": "^14.2.10",
+    "@angular/compiler-cli": "^14.2.12",
+    "@angular/language-service": "^14.2.12",
     "@types/jasmine": "~3.10.2",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~16.11.9",
@@ -49,6 +49,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~10.4.0",
     "tslint": "~6.1.3",
-    "typescript": "~4.4.2"
+    "typescript": "~4.8.4"
   }
 }
