--- a/remote/src/main/package.json
+++ b/remote/src/main/package.json
@@ -1,6 +1,6 @@
 {
   "name": "radioberry",
-  "version": "0.1.11",
+  "version": "0.1.16",
   "scripts": {
     "ng": "ng",
     "watch": "ng build --watch --configuration development",
@@ -24,8 +24,9 @@
     "@angular/platform-browser-dynamic": "^15.0.4",
     "@angular/router": "^15.0.4",
     "@types/underscore": "^1.9.3",
+    "low-pass-filter": "^1.0.0",
     "rxjs": "~7.4.0",
-    "tslib": "^2.3.1",
+    "tslib": "^2.4.1",
     "underscore": "^1.9.1",
     "zone.js": "~0.11.4"
   },
